src/showcases/beatmaker/synth/styles/synth.scss
section{
  background:#eee;
}
knob{
  p{
    text-align: center;
  }
  div{
    margin:0 auto;
  }
}
knob>p{
  margin-bottom: 7px !important;

}
oscillator{
  .row{
    .col{
      padding: 0;
    }
  }
}
form{
  div.grey.lighten-3{
    padding:0.75rem 0.375rem !important;
  }
}
.input-field{
  margin-top: 0;
}
.key{
  box-sizing: border-box;
  width:9.091% !important;
  display:inline-block;
  padding:0 !important;overflow: visible;
}
.key{
  h1{
    text-align: center;
    margin: 0;
    font-size: 2.2rem;
  }
  div{
    margin: 0 0.25rem;
    height: 100%;
    border-radius: 0px 0px 5px 5px;
    display: block;
    font-size:12px;
    transition: box-shadow .25s;

  }
}

.key.white{

  height: 220px;
  /*float:left;*/
  position: relative;
  h1{
   color:#000;
   padding-top: 11rem;
 }
 div{
   background-color: #fff;
 }
}
.key.white.play{
  div{
    background: rgb(221, 221, 221)
  }
}
.key.black-key{

  height:148px;
  position: absolute;
  z-index: 2;
  text-align: center;
  background: transparent !important;
  margin-left: -3.5% !important;
  padding: 0 4px !important;
  div{
      display: inline-block;
      margin: 0 0.25rem;
      outline: none;
      background-color: #000;
      width: 100%;

    }
  h1{
    color:#fff;
    padding-top: 6rem
  }


}
.dial{
  // padding-right: 2px !important;
}
.key.black-key.play{
  background:rgb(113, 113, 113)
}
.key.black-key >
.key-info{
  list-style: none;
  margin:0px;
  padding:0px;
  text-align: center;
}
.key-item{
  height: 100%;
  padding-top: 105%;
}

.key-item > a{
  padding-top: 50%;
}
.parameter-holder{
  padding: 0;
  margin:0 0.75rem;
}
form.col.m3,
form.col.m4,
form.col.m5,
form.col.m6{
  padding-left: 0;
  margin-bottom:0.75rem;
  .row{
    padding: 0.75rem 0.375rem;

  }
  .col{
    text-align: center;
    padding: 0 0.375rem;
  }

}
form.col.m3:last-child,
form.col.m4:last-child,
form.col.m6:last-child,
form.col.m5:last-child{
  padding-right: 0;
}

@media only screen and (max-width: 600px){
  form.col.m3,
  form.col.m4,
  form.col.m5,
  form.col.m6{
    padding: 0;
  }
  .key{
    div{
      margin:0 0.05rem;
    }
  }
}

